--- a/style.css
+++ b/style.css
@@ -170,25 +170,21 @@ header a:active{
     font-family: phenomena_regular;
   }
 
-  .overlay>div>h1{
-    font-family: phenomena_bold;
-  }
+.overlay>div>h1{font-family: phenomena_bold;}
   
-  .content {
+.content {
     background-color: #fff;
     padding: 20px;
     max-width: 600px;
     text-align: center;
-  }
+}
 
-  .content>button{
+.content>button{
     background-color: #CD5888;
     color: #fff;
-  }
+}
   
-  #close-overlay {
+#close-overlay {
     display: block;
     margin: 20px auto 0;
   }
-  
-  
